--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="icon" href="https://ik.imagekit.io/evuf2rglq/logo?updatedAt=1765798573820" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Allama Shabbir Ahmed Usmani Medical Complex</title>
 </head>
